--- a/course_files/index.Rmd
+++ b/course_files/index.Rmd
@@ -1,8 +1,10 @@
 --- 
 title: "Analysis of single cell RNA-seq data"
-author: "Vladimir Kiselev (<a href = 'https://twitter.com/wikiselev'>wikiselev</a>), Tallulah Andrews (<a href = 'https://twitter.com/talandrews'>talandrews</a>), Jennifer Westoby (<a href = 'https://twitter.com/Jenni_Westoby'>Jenni_Westoby</a>), Davis McCarthy (<a href = 'https://twitter.com/davisjmcc'>davisjmcc</a>), Maren Büttner (<a href = 'https://twitter.com/marenbuettner'>marenbuettner</a>), Jimmy Lee (<a href = 'https://twitter.com/THJimmyLee'>THJimmyLee</a>), Krzysztof Polanski, Sebastian Y. Müller, Elo Madissoon, Stephane Ballereau, Maria Do Nascimento Lopes Primo, Rocio Martinez Nunez and Martin Hemberg (<a href = 'https://twitter.com/m_hemberg'>m_hemberg</a>)"
+author: "Alexander Predeus (<a href = 'https://twitter.com/apredeus'>apredeus</a>), Hugo Tavares (<a href = 'https://tavareshugo.github.io/cv/'>tavareshugo</a>), Simon Murray (<a href = 'https://github.com/SimonDMurray'>simondmurray</a>), Vladimir Kiselev (<a href = 'https://twitter.com/wikiselev'>wikiselev</a>), Tallulah Andrews (<a href = 'https://twitter.com/talandrews'>talandrews</a>), Jennifer Westoby (<a href = 'https://twitter.com/Jenni_Westoby'>Jenni_Westoby</a>), Davis McCarthy (<a href = 'https://twitter.com/davisjmcc'>davisjmcc</a>), Maren Büttner (<a href = 'https://twitter.com/marenbuettner'>marenbuettner</a>), Jimmy Lee (<a href = 'https://twitter.com/THJimmyLee'>THJimmyLee</a>), Krzysztof Polanski, Sebastian Y. Müller, Elo Madissoon, Stephane Ballereau, Maria Do Nascimento Lopes Primo, Rocio Martinez Nunez and Martin Hemberg (<a href = 'https://twitter.com/m_hemberg'>m_hemberg</a>)"
 date: "`r Sys.Date()`"
 knit: "bookdown::render_book"
+split_by: none
+self_contained: true
 documentclass: book
 bibliography: [book.bib]
 biblio-style: apalike
@@ -19,18 +21,6 @@ Today it is possible to obtain genome-wide transcriptome data from single cells 
 In this course we will discuss some of the questions that can be addressed using scRNA-seq as well as the available computational and statistical methods available. The course is taught through the University of Cambridge <a href="http://training.csx.cam.ac.uk/bioinformatics/" target="blank">Bioinformatics training unit</a>, but the material found on these pages is meant to be used for anyone interested in learning about computational analysis of scRNA-seq data. The course is taught twice per year and the material here is updated prior to each event.
 
 The number of computational tools is increasing rapidly and we are doing our best to keep up to date with what is available. One of the main constraints for this course is that we would like to use tools that are implemented in R and that run reasonably fast. Moreover, we will also confess to being somewhat biased towards methods that have been developed either by us or by our friends and colleagues. 
-
-## Video
-
-This video was recorded during the course (2 days) in May 2019.
-
-### Day 1
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/thHgPqQpkE4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-### Day 2
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/7dQ_pleDO2Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Registration  
 
@@ -102,4 +92,4 @@ We recommend attending the [Introduction to RNA-seq and ChIP-seq data analysis](
 
 ## Contact
 
-If you have any __comments__, __questions__ or __suggestions__ about the material, please contact <a href="mailto:vladimir.yu.kiselev@gmail.com">Vladimir Kiselev</a>.
+If you have any __comments__, __questions__ or __suggestions__ about the material, please contact <a href="mailto:predeus@gmail.com">Alexander Predeus</a>, <a href="mailto:hugo.tavares@slcu.cam.ac.uk">Hugo Tavares</a>, or <a href="mailto:vladimir.yu.kiselev@gmail.com">Vladimir Kiselev</a>.
